[package]
name = "litterrobot3"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A client wrapper over the litter robot API. Control your robot from rust :)"
readme = "README.md"
homepage = "https://github.com/Blankets/litterrobot3"
repository = "https://github.com/Blankets/litterrobot3"

[dependencies]
anyhow = "1.0.98"
base64 = "0.22.1"
reqwest = { version = "0.12.19", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = "1.45.1"
